--- a/app/src/main/resources/templates/mypage/myFeedList.html
+++ b/app/src/main/resources/templates/mypage/myFeedList.html
@@ -83,7 +83,7 @@
     <div class="collapse navbar-collapse justify-content-md-center " id="navbarsExample08">
       <ul class="navbar-nav fw-bold text-dark ">
         <li class="nav-item p-1">
-          <a class="nav-link" aria-current="page" th:href="@{/board/partyList}">파티게시판</a>
+          <a class="nav-link" aria-current="page" th:href="@{/party/list}">파티게시판</a>
         </li>
         <li class="nav-item p-1">
           <a class="nav-link" href="#">피드게시판</a>
