--- a/app/src/main/resources/templates/party/partyList.html
+++ b/app/src/main/resources/templates/party/partyList.html
@@ -187,80 +187,77 @@
     <!-------------------------------구분선-------------------------->
     <div class="line-3"></div>
     <!-------------------------------Party_content-------------------------->
-    <div id="party-board">
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-12">
-            <div class="row row-cols-1 row-cols-md-4 g-4">
-              <!--1번 카드-->
-              <th:block th:each="party : ${parties}">
-                <div class="card">
+   <div id = "partycontent">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-4 g-4 text-small">
+            <th:block th:each="party : ${parties}">
+              <div class="card" style="width: 20rem;" th:fragment="fragment-card">
+                <div class="cd-header">
 
-                  <!--                  <div class="card-header bg-transparent border-secondary" th:text="${party.meal}"><span class="badge bg-warning">New</span></h1> </div>-->
-                  <div class="card-header bg-transparent border-secondary" th:text="'[' + ${party.meal} + '파티][' + ${party.food} + ']'"><span class="badge bg-warning" th:text="${party.no}">New</span></div>
-                  <!--              <div class="card-header bg-transparent border-secondary"><span class="badge bg-warning">New</span></h1> </div>-->
-                  <!--                  <img src="/images/1.jpg" class="card-img-top" alt="...">-->
+                  <div class="line-2"></div>
+
+                  <div class="card-head-container">
+                    <div class="row">
+                      <!--                        <div class="col-5"> 점심파티-->
+                      <div class="col-4"th:text="'[' + ${party.meal} + '파티]'">
+                      </div>
+                      <!--                          <div class="col-4"> 한식-->
+                      <div class="col-4"th:text="'[' + ${party.food} + ']'">
+                      </div>
+<!--                      <div class="col-3"> [4/8]-->
+                      <div class="col-4"th:text="'[' + '#' + '/' + ${party.limit} + ']'">
+                      </div>
+                    </div>
+
+                    <div class="line-2"></div>
+
+                  </div>
+                </div>
+
+                <div class="tumbnail">
                   <!--   th:src="${party.thumbnail} : 썸네일 주소가 담긴다
                          th:src="@{/party/files/{path}(path=${party.thumnail})}"
                                 : /party/files/ -> 이미지가 담긴 경로
                                 : {path} 변수에 (path=${party.thumnail}) DB에 저장된 첨부파일 uuid로 변환된 이름을 가져온다 -->
-                  <a th:href="@{detail(no=${party.no})}"><img id="thumbNail" th:src="@{/party/files/{path}(path=${party.thumbnail})}" class="card-img-top"></a>
-                  <div class="card-body text-small">
-                    <a th:href="@{detail(no=${party.no})}"><h5 class="card-title" th:text="${party.title}"></h5></a>
-                    <p class="card-text"></p>
-                    <div class="card-footer bg-transparent border-secondary">#</div>
-                    <div class="btn-group">
-                      <!--                      <button type="button" class="btn btn-sm btn-outline-secondary">20대</button> &lt;!&ndash; TODO 우섭햄 수정1 &ndash;&gt;-->
-                      <!--                      <button type="button" class="btn btn-sm btn-outline-secondary">남자만</button>-->
-                      <button type="button" class="btn btn-sm btn-outline-secondary" th:text="'[' + ${party.age} + '대]'">20대</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary"th:text="'[' + ${party.gender} + ']'">남자만</button>
-                      <!--버튼 모달-->
-                      <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-                        <div class="modal-dialog modal-dialog-centered">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h1 class="modal-title fs-5" id="exampleModalToggleLabel"><div id="party-title"></div></h1>
-                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                              [점심파티] ~ 에 참석하시겠습니까?
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-                              <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">참석하기</button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+                  <a th:href="@{detail(no=${party.no})}"><img id="thumbNail" th:src="@{/party/files/{path}(path=${party.thumbnail})}" class="img-thumbnail" alt="이미지가 없습니다."></a>
+                </div>
 
-                      <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
-                        <div class="modal-dialog modal-dialog-centered">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">파티 참석 시</h1>
-                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                              이 파티에 참석하셨습니다.
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">확인</button>
-                            </div>
-                          </div>
-                        </div>
+                <div class="card-body">
+                  <h5 class="card-title" th:text="${party.title}"></h5>
+                  <p class="card-text" th:text="${party.writer.nick}">작성자</p>
+                </div><!--card-body end-->
+
+                <div class="cd-index bg-light">
+                  <div class="container">
+                    <div class="row justify-content-center">
+                      <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-outline-primary" th:text="'[' + ${party.age} + '대]'"></button>
+                        <button type="button" class="btn btn-outline-primary" th:text="'[' + ${party.gender} + ']'"></button>
+                        <button type="button" class="btn btn-outline-primary" th:text="'[' + ${party.time} + '시]'"></button>
                       </div>
-                      <a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle" role="button">참여</a>
                     </div>
                   </div>
+                </div>
+
+                <div class="line-2"></div>
+
+
+                <div class="cd-footer bg-light">
+                  <div class="container">
+                    <div class="row justify-content-center">
+                      <a class="btn btn-primary" data-bs-toggle="modal" href="#addbutton" role="button">참여하기</a>
+                    </div>
+                  </div>
+                  <div class="line-2"></div>
 
                 </div>
-              </th:block>
 
-            </div>
-          </div>
-        </div>
+              </div><!--card end-->
+            </th:block>
       </div>
     </div>
+    </div>
+   <div th:replace="modal/buttonmodal :: #addbutton"></div>
 
     <!-------------------------------구분선-------------------------->
     <div class="line-3"></div>
