--- a/app/src/main/resources/templates/mypage/myFeedListDetail.html
+++ b/app/src/main/resources/templates/mypage/myFeedListDetail.html
@@ -57,86 +57,12 @@
     </div>
   </div>
   <!-- Page content wrapper-->
-  <!-- 상세보기 -->
-  <form th:action="@{/party/update}" method="post" enctype="multipart/form-data">
-    <div class="container border rounded">
-  
-      <!--1줄-->
-      <div class="row p-3">
-        <div class="col-2"  th:text="'[' + ${party.meal} + '파티]'">
-        </div>
-        <div class="col-2" th:text="'[' + ${party.food} + ']'">
-        </div>
-        <div class="col-2">
-        </div>
-        <div class="col-2" th:text="'(3' + '/' + ${party.max} + ')'">
-        </div>
-  
-        <div class="col-2">
-          파티참여
-        </div>
-        <div class="col-2">
-        <input name="no" type="number" value="1" th:value="${party.no}" readonly hidden/>
-      </div>
+   피드게시물 개인 출력 test
+ 
+<!--  테이블 부트스트랩 end   -->
     </div>
-  
-      <!--2줄-->
-      <div class="row p-3">
-        <div class="col" ><input name='title' type='text'value='제목'th:value="${party.title}">
-        </div>
-      </div>
-  
-      <!--3줄-->
-      <div class="row p-3 border-bottom">
-        <div class="col-2" th:text="${party.writer.nick}">
-        </div>
-        <div class="col-2" th:text=" '조회수:' + ${party.viewCnt}">
-        </div>
-        <div class="col-2" th:text=" '작성일:' + ${party.createDate}">
-        </div>
-      
-      </div>
-      
-      <!--4줄-->
-      <div class="row p-3 border-bottom">
-        <div class="col">
-          <textarea id='content' name='content' th:text="${party.content}"></textarea>
-        </div>
-      </div>
-      <!--5줄-->
-      <div class="row p-3">
-        <div class="col">
-          참여조건
-        </div>
-      </div>
-      <!--6줄-->
-      <div class="row p-3">
-        <div class="col-3" th:text="'성별 : ' + '[' + ${party.gender} + ']'">
-        </div>
-        <div class="col-3" th:text="'연령대 : ' + '[' + ${party.age} + '대]'">
-        </div>
-      </div>
-      <!--7줄-->
-      <div class="row p-3">
-        <div class="col" th:text="'[' + ${#dates.createNowForTimeZone(party.time)} + '시]'">
-        </div>
-      </div>
-  
-      <!--8줄-->
-      <div class="row p-3">
-        <div class="col-2"><p th:text="'장소명 : ' +'[' + ${party.location} + ']'"></p>
-        </div>
-        <div class="col-2" th:text="'주소 : ' +'[' + ${party.address} + ']'">
-        </div>
-      </div>
-    </div>
-    <button type="submit" class="btn btn-outline-secondary">변경</button>
-    <button type="button" class="btn btn-outline-secondary"><a th:href="@{delete(no=${party.no})}">삭제</a></button>
-    
-  </form> 
-  <!---------------------------- 상세보기 end ------------------------------>
+  </div>
 </div>
-
 
 <!-------------------------------구분선-------------------------->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
